added classes that match border-top-width

--- a/AcSS/utils.css
+++ b/AcSS/utils.css
@@ -372,6 +372,490 @@
 
 /* Border --------------------------------------------------------------------- */
 /* Top -------------------------------- */
+.BORDERTOPDASHEDRED1, .BTDAR1,
+.BORDERTOPDASHEDGREEN1, .BTDAG1,
+.BORDERTOPDASHEDBLUE1, .BTDAB1,
+.BORDERTOPDASHEDYELLOW1, .BTDAY1,
+.BORDERTOPDASHEDBLACK1, .BTDA01,
+.BORDERTOPDASHEDWHITE1, .BTDAW1,
+.BORDERTOPDASHEDGREY11, .BTDAG11,
+.BORDERTOPDASHEDGREY21, .BTDAG21,
+.BORDERTOPDASHEDGREY31, .BTDAG31,
+.BORDERTOPDOUBLERED1, .BTDOR1,
+.BORDERTOPDOUBLEGREEN1, .BTDOG1,
+.BORDERTOPDOUBLEBLUE1, .BTDOB1,
+.BORDERTOPDOUBLEYELLOW1, .BTDOY1,
+.BORDERTOPDOUBLEBLACK1, .BTDO01,
+.BORDERTOPDOUBLEWHITE1, .BTDOW1,
+.BORDERTOPDOUBLEGREY11, .BTDOG11,
+.BORDERTOPDOUBLEGREY21, .BTDOG21,
+.BORDERTOPDOUBLEGREY31, .BTDOG31,
+.BORDERTOPDOTTEDRED1, .BTDTR1,
+.BORDERTOPDOTTEDGREEN1, .BTDTG1,
+.BORDERTOPDOTTEDBLUE1, .BTDTB1,
+.BORDERTOPDOTTEDYELLOW1, .BTDTY1,
+.BORDERTOPDOTTEDBLACK1, .BTDT01,
+.BORDERTOPDOTTEDWHITE1, .BTDTW1,
+.BORDERTOPDOTTEDGREY11, .BTDTG11,
+.BORDERTOPDOTTEDGREY21, .BTDTG21,
+.BORDERTOPDOTTEDGREY31, .BTDTG31,
+.BORDERTOPSOLIDRED1, .BTSOR1,
+.BORDERTOPSOLIDGREEN1, .BTSOG1,
+.BORDERTOPSOLIDBLUE1, .BTSOB1,
+.BORDERTOPSOLIDYELLOW1, .BTSOY1,
+.BORDERTOPSOLIDBLACK1, .BTSO01,
+.BORDERTOPSOLIDWHITE1, .BTSOW1,
+.BORDERTOPSOLIDGREY11, .BTSOG11,
+.BORDERTOPSOLIDGREY21, .BTSOG21,
+.BORDERTOPSOLIDGREY31, .BTSOG31,
+.BORDERALLDASHEDRED1, .BADAR1,
+.BORDERALLDASHEDGREEN1, .BADAG1,
+.BORDERALLDASHEDBLUE1, .BADAB1,
+.BORDERALLDASHEDYELLOW1, .BADAY1,
+.BORDERALLDASHEDBLACK1, .BADA01,
+.BORDERALLDASHEDWHITE1, .BADAW1,
+.BORDERALLDASHEDGREY11, .BADAG11,
+.BORDERALLDASHEDGREY21, .BADAG21,
+.BORDERALLDASHEDGREY31, .BADAG31,
+.BORDERALLDOUBLERED1, .BADOR1,
+.BORDERALLDOUBLEGREEN1, .BADOG1,
+.BORDERALLDOUBLEBLUE1, .BADOB1,
+.BORDERALLDOUBLEYELLOW1, .BADOY1,
+.BORDERALLDOUBLEBLACK1, .BADO01,
+.BORDERALLDOUBLEWHITE1, .BADOW1,
+.BORDERALLDOUBLEGREY11, .BADOG11,
+.BORDERALLDOUBLEGREY21, .BADOG21,
+.BORDERALLDOUBLEGREY31, .BADOG31,
+.BORDERALLDOTTEDRED1, .BADTR1,
+.BORDERALLDOTTEDGREEN1, .BADTG1,
+.BORDERALLDOTTEDBLUE1, .BADTB1,
+.BORDERALLDOTTEDYELLOW1, .BADTY1,
+.BORDERALLDOTTEDBLACK1, .BADT01,
+.BORDERALLDOTTEDWHITE1, .BADTW1,
+.BORDERALLDOTTEDGREY11, .BADTG11,
+.BORDERALLDOTTEDGREY21, .BADTG21,
+.BORDERALLDOTTEDGREY31, .BADTG31,
+.BORDERALLSOLIDRED1, .BASOR1,
+.BORDERALLSOLIDGREEN1, .BASOG1,
+.BORDERALLSOLIDBLUE1, .BASOB1,
+.BORDERALLSOLIDYELLOW1, .BASOY1,
+.BORDERALLSOLIDBLACK1, .BASO01,
+.BORDERALLSOLIDWHITE1, .BASOW1,
+.BORDERALLSOLIDGREY11, .BASOG11,
+.BORDERALLSOLIDGREY21, .BASOG21,
+.BORDERALLSOLIDGREY31, .BASOG31
+{
+    border-top-width: 1px;
+}
+.BORDERTOPDASHEDRED2, .BTDAR2,
+.BORDERTOPDASHEDGREEN2, .BTDAG2,
+.BORDERTOPDASHEDBLUE2, .BTDAB2,
+.BORDERTOPDASHEDYELLOW2, .BTDAY2,
+.BORDERTOPDASHEDBLACK2, .BTDA02,
+.BORDERTOPDASHEDWHITE2, .BTDAW2,
+.BORDERTOPDASHEDGREY12, .BTDAG12,
+.BORDERTOPDASHEDGREY22, .BTDAG22,
+.BORDERTOPDASHEDGREY32, .BTDAG32,
+.BORDERTOPDOUBLERED2, .BTDOR2,
+.BORDERTOPDOUBLEGREEN2, .BTDOG2,
+.BORDERTOPDOUBLEBLUE2, .BTDOB2,
+.BORDERTOPDOUBLEYELLOW2, .BTDOY2,
+.BORDERTOPDOUBLEBLACK2, .BTDO02,
+.BORDERTOPDOUBLEWHITE2, .BTDOW2,
+.BORDERTOPDOUBLEGREY12, .BTDOG12,
+.BORDERTOPDOUBLEGREY22, .BTDOG22,
+.BORDERTOPDOUBLEGREY32, .BTDOG32,
+.BORDERTOPDOTTEDRED2, .BTDTR2,
+.BORDERTOPDOTTEDGREEN2, .BTDTG2,
+.BORDERTOPDOTTEDBLUE2, .BTDTB2,
+.BORDERTOPDOTTEDYELLOW2, .BTDTY2,
+.BORDERTOPDOTTEDBLACK2, .BTDT02,
+.BORDERTOPDOTTEDWHITE2, .BTDTW2,
+.BORDERTOPDOTTEDGREY12, .BTDTG12,
+.BORDERTOPDOTTEDGREY22, .BTDTG22,
+.BORDERTOPDOTTEDGREY32, .BTDTG32,
+.BORDERTOPSOLIDRED2, .BTSOR2,
+.BORDERTOPSOLIDGREEN2, .BTSOG2,
+.BORDERTOPSOLIDBLUE2, .BTSOB2,
+.BORDERTOPSOLIDYELLOW2, .BTSOY2,
+.BORDERTOPSOLIDBLACK2, .BTSO02,
+.BORDERTOPSOLIDWHITE2, .BTSOW2,
+.BORDERTOPSOLIDGREY12, .BTSOG12,
+.BORDERTOPSOLIDGREY22, .BTSOG22,
+.BORDERTOPSOLIDGREY32, .BTSOG32,
+.BORDERALLDASHEDRED2, .BADAR2,
+.BORDERALLDASHEDGREEN2, .BADAG2,
+.BORDERALLDASHEDBLUE2, .BADAB2,
+.BORDERALLDASHEDYELLOW2, .BADAY2,
+.BORDERALLDASHEDBLACK2, .BADA02,
+.BORDERALLDASHEDWHITE2, .BADAW2,
+.BORDERALLDASHEDGREY12, .BADAG12,
+.BORDERALLDASHEDGREY22, .BADAG22,
+.BORDERALLDASHEDGREY32, .BADAG32,
+.BORDERALLDOUBLERED2, .BADOR2,
+.BORDERALLDOUBLEGREEN2, .BADOG2,
+.BORDERALLDOUBLEBLUE2, .BADOB2,
+.BORDERALLDOUBLEYELLOW2, .BADOY2,
+.BORDERALLDOUBLEBLACK2, .BADO02,
+.BORDERALLDOUBLEWHITE2, .BADOW2,
+.BORDERALLDOUBLEGREY12, .BADOG12,
+.BORDERALLDOUBLEGREY22, .BADOG22,
+.BORDERALLDOUBLEGREY32, .BADOG32,
+.BORDERALLDOTTEDRED2, .BADTR2,
+.BORDERALLDOTTEDGREEN2, .BADTG2,
+.BORDERALLDOTTEDBLUE2, .BADTB2,
+.BORDERALLDOTTEDYELLOW2, .BADTY2,
+.BORDERALLDOTTEDBLACK2, .BADT02,
+.BORDERALLDOTTEDWHITE2, .BADTW2,
+.BORDERALLDOTTEDGREY12, .BADTG12,
+.BORDERALLDOTTEDGREY22, .BADTG22,
+.BORDERALLDOTTEDGREY32, .BADTG32,
+.BORDERALLSOLIDRED2, .BASOR2,
+.BORDERALLSOLIDGREEN2, .BASOG2,
+.BORDERALLSOLIDBLUE2, .BASOB2,
+.BORDERALLSOLIDYELLOW2, .BASOY2,
+.BORDERALLSOLIDBLACK2, .BASO02,
+.BORDERALLSOLIDWHITE2, .BASOW2,
+.BORDERALLSOLIDGREY12, .BASOG12,
+.BORDERALLSOLIDGREY22, .BASOG22,
+.BORDERALLSOLIDGREY32, .BASOG32
+{
+    border-top-width: 2px;
+}
+.BORDERTOPDASHEDRED3, .BTDAR3,
+.BORDERTOPDASHEDGREEN3, .BTDAG3,
+.BORDERTOPDASHEDBLUE3, .BTDAB3,
+.BORDERTOPDASHEDYELLOW3, .BTDAY3,
+.BORDERTOPDASHEDBLACK3, .BTDA03,
+.BORDERTOPDASHEDWHITE3, .BTDAW3,
+.BORDERTOPDASHEDGREY13, .BTDAG13,
+.BORDERTOPDASHEDGREY23, .BTDAG23,
+.BORDERTOPDASHEDGREY33, .BTDAG33,
+.BORDERTOPDOUBLERED3, .BTDOR3,
+.BORDERTOPDOUBLEGREEN3, .BTDOG3,
+.BORDERTOPDOUBLEBLUE3, .BTDOB3,
+.BORDERTOPDOUBLEYELLOW3, .BTDOY3,
+.BORDERTOPDOUBLEBLACK3, .BTDO03,
+.BORDERTOPDOUBLEWHITE3, .BTDOW3,
+.BORDERTOPDOUBLEGREY13, .BTDOG13,
+.BORDERTOPDOUBLEGREY23, .BTDOG23,
+.BORDERTOPDOUBLEGREY33, .BTDOG33,
+.BORDERTOPDOTTEDRED3, .BTDTR3,
+.BORDERTOPDOTTEDGREEN3, .BTDTG3,
+.BORDERTOPDOTTEDBLUE3, .BTDTB3,
+.BORDERTOPDOTTEDYELLOW3, .BTDTY3,
+.BORDERTOPDOTTEDBLACK3, .BTDT03,
+.BORDERTOPDOTTEDWHITE3, .BTDTW3,
+.BORDERTOPDOTTEDGREY13, .BTDTG13,
+.BORDERTOPDOTTEDGREY23, .BTDTG23,
+.BORDERTOPDOTTEDGREY33, .BTDTG33,
+.BORDERTOPSOLIDRED3, .BTSOR3,
+.BORDERTOPSOLIDGREEN3, .BTSOG3,
+.BORDERTOPSOLIDBLUE3, .BTSOB3,
+.BORDERTOPSOLIDYELLOW3, .BTSOY3,
+.BORDERTOPSOLIDBLACK3, .BTSO03,
+.BORDERTOPSOLIDWHITE3, .BTSOW3,
+.BORDERTOPSOLIDGREY13, .BTSOG13,
+.BORDERTOPSOLIDGREY23, .BTSOG23,
+.BORDERTOPSOLIDGREY33, .BTSOG33,
+.BORDERALLDASHEDRED3, .BADAR3,
+.BORDERALLDASHEDGREEN3, .BADAG3,
+.BORDERALLDASHEDBLUE3, .BADAB3,
+.BORDERALLDASHEDYELLOW3, .BADAY3,
+.BORDERALLDASHEDBLACK3, .BADA03,
+.BORDERALLDASHEDWHITE3, .BADAW3,
+.BORDERALLDASHEDGREY13, .BADAG13,
+.BORDERALLDASHEDGREY23, .BADAG23,
+.BORDERALLDASHEDGREY33, .BADAG33,
+.BORDERALLDOUBLERED3, .BADOR3,
+.BORDERALLDOUBLEGREEN3, .BADOG3,
+.BORDERALLDOUBLEBLUE3, .BADOB3,
+.BORDERALLDOUBLEYELLOW3, .BADOY3,
+.BORDERALLDOUBLEBLACK3, .BADO03,
+.BORDERALLDOUBLEWHITE3, .BADOW3,
+.BORDERALLDOUBLEGREY13, .BADOG13,
+.BORDERALLDOUBLEGREY23, .BADOG23,
+.BORDERALLDOUBLEGREY33, .BADOG33,
+.BORDERALLDOTTEDRED3, .BADTR3,
+.BORDERALLDOTTEDGREEN3, .BADTG3,
+.BORDERALLDOTTEDBLUE3, .BADTB3,
+.BORDERALLDOTTEDYELLOW3, .BADTY3,
+.BORDERALLDOTTEDBLACK3, .BADT03,
+.BORDERALLDOTTEDWHITE3, .BADTW3,
+.BORDERALLDOTTEDGREY13, .BADTG13,
+.BORDERALLDOTTEDGREY23, .BADTG23,
+.BORDERALLDOTTEDGREY33, .BADTG33,
+.BORDERALLSOLIDRED3, .BASOR3,
+.BORDERALLSOLIDGREEN3, .BASOG3,
+.BORDERALLSOLIDBLUE3, .BASOB3,
+.BORDERALLSOLIDYELLOW3, .BASOY3,
+.BORDERALLSOLIDBLACK3, .BASO03,
+.BORDERALLSOLIDWHITE3, .BASOW3,
+.BORDERALLSOLIDGREY13, .BASOG13,
+.BORDERALLSOLIDGREY23, .BASOG23,
+.BORDERALLSOLIDGREY33, .BASOG33
+{
+    border-top-width: 3px;
+}
+.BORDERTOPDASHEDRED4, .BTDAR4,
+.BORDERTOPDASHEDGREEN4, .BTDAG4,
+.BORDERTOPDASHEDBLUE4, .BTDAB4,
+.BORDERTOPDASHEDYELLOW4, .BTDAY4,
+.BORDERTOPDASHEDBLACK4, .BTDA04,
+.BORDERTOPDASHEDWHITE4, .BTDAW4,
+.BORDERTOPDASHEDGREY14, .BTDAG14,
+.BORDERTOPDASHEDGREY24, .BTDAG24,
+.BORDERTOPDASHEDGREY34, .BTDAG34,
+.BORDERTOPDOUBLERED4, .BTDOR4,
+.BORDERTOPDOUBLEGREEN4, .BTDOG4,
+.BORDERTOPDOUBLEBLUE4, .BTDOB4,
+.BORDERTOPDOUBLEYELLOW4, .BTDOY4,
+.BORDERTOPDOUBLEBLACK4, .BTDO04,
+.BORDERTOPDOUBLEWHITE4, .BTDOW4,
+.BORDERTOPDOUBLEGREY14, .BTDOG14,
+.BORDERTOPDOUBLEGREY24, .BTDOG24,
+.BORDERTOPDOUBLEGREY34, .BTDOG34,
+.BORDERTOPDOTTEDRED4, .BTDTR4,
+.BORDERTOPDOTTEDGREEN4, .BTDTG4,
+.BORDERTOPDOTTEDBLUE4, .BTDTB4,
+.BORDERTOPDOTTEDYELLOW4, .BTDTY4,
+.BORDERTOPDOTTEDBLACK4, .BTDT04,
+.BORDERTOPDOTTEDWHITE4, .BTDTW4,
+.BORDERTOPDOTTEDGREY14, .BTDTG14,
+.BORDERTOPDOTTEDGREY24, .BTDTG24,
+.BORDERTOPDOTTEDGREY34, .BTDTG34,
+.BORDERTOPSOLIDRED4, .BTSOR4,
+.BORDERTOPSOLIDGREEN4, .BTSOG4,
+.BORDERTOPSOLIDBLUE4, .BTSOB4,
+.BORDERTOPSOLIDYELLOW4, .BTSOY4,
+.BORDERTOPSOLIDBLACK4, .BTSO04,
+.BORDERTOPSOLIDWHITE4, .BTSOW4,
+.BORDERTOPSOLIDGREY14, .BTSOG14,
+.BORDERTOPSOLIDGREY24, .BTSOG24,
+.BORDERTOPSOLIDGREY34, .BTSOG34,
+.BORDERALLDASHEDRED4, .BADAR4,
+.BORDERALLDASHEDGREEN4, .BADAG4,
+.BORDERALLDASHEDBLUE4, .BADAB4,
+.BORDERALLDASHEDYELLOW4, .BADAY4,
+.BORDERALLDASHEDBLACK4, .BADA04,
+.BORDERALLDASHEDWHITE4, .BADAW4,
+.BORDERALLDASHEDGREY14, .BADAG14,
+.BORDERALLDASHEDGREY24, .BADAG24,
+.BORDERALLDASHEDGREY34, .BADAG34,
+.BORDERALLDOUBLERED4, .BADOR4,
+.BORDERALLDOUBLEGREEN4, .BADOG4,
+.BORDERALLDOUBLEBLUE4, .BADOB4,
+.BORDERALLDOUBLEYELLOW4, .BADOY4,
+.BORDERALLDOUBLEBLACK4, .BADO04,
+.BORDERALLDOUBLEWHITE4, .BADOW4,
+.BORDERALLDOUBLEGREY14, .BADOG14,
+.BORDERALLDOUBLEGREY24, .BADOG24,
+.BORDERALLDOUBLEGREY34, .BADOG34,
+.BORDERALLDOTTEDRED4, .BADTR4,
+.BORDERALLDOTTEDGREEN4, .BADTG4,
+.BORDERALLDOTTEDBLUE4, .BADTB4,
+.BORDERALLDOTTEDYELLOW4, .BADTY4,
+.BORDERALLDOTTEDBLACK4, .BADT04,
+.BORDERALLDOTTEDWHITE4, .BADTW4,
+.BORDERALLDOTTEDGREY14, .BADTG14,
+.BORDERALLDOTTEDGREY24, .BADTG24,
+.BORDERALLDOTTEDGREY34, .BADTG34,
+.BORDERALLSOLIDRED4, .BASOR4,
+.BORDERALLSOLIDGREEN4, .BASOG4,
+.BORDERALLSOLIDBLUE4, .BASOB4,
+.BORDERALLSOLIDYELLOW4, .BASOY4,
+.BORDERALLSOLIDBLACK4, .BASO04,
+.BORDERALLSOLIDWHITE4, .BASOW4,
+.BORDERALLSOLIDGREY14, .BASOG14,
+.BORDERALLSOLIDGREY24, .BASOG24,
+.BORDERALLSOLIDGREY34, .BASOG34
+{
+    border-top-width: 4px;
+}
+.BORDERTOPDASHEDRED5, .BTDAR5,
+.BORDERTOPDASHEDGREEN5, .BTDAG5,
+.BORDERTOPDASHEDBLUE5, .BTDAB5,
+.BORDERTOPDASHEDYELLOW5, .BTDAY5,
+.BORDERTOPDASHEDBLACK5, .BTDA05,
+.BORDERTOPDASHEDWHITE5, .BTDAW5,
+.BORDERTOPDASHEDGREY15, .BTDAG15,
+.BORDERTOPDASHEDGREY25, .BTDAG25,
+.BORDERTOPDASHEDGREY35, .BTDAG35,
+.BORDERTOPDOUBLERED5, .BTDOR5,
+.BORDERTOPDOUBLEGREEN5, .BTDOG5,
+.BORDERTOPDOUBLEBLUE5, .BTDOB5,
+.BORDERTOPDOUBLEYELLOW5, .BTDOY5,
+.BORDERTOPDOUBLEBLACK5, .BTDO05,
+.BORDERTOPDOUBLEWHITE5, .BTDOW5,
+.BORDERTOPDOUBLEGREY15, .BTDOG15,
+.BORDERTOPDOUBLEGREY25, .BTDOG25,
+.BORDERTOPDOUBLEGREY35, .BTDOG35,
+.BORDERTOPDOTTEDRED5, .BTDTR5,
+.BORDERTOPDOTTEDGREEN5, .BTDTG5,
+.BORDERTOPDOTTEDBLUE5, .BTDTB5,
+.BORDERTOPDOTTEDYELLOW5, .BTDTY5,
+.BORDERTOPDOTTEDBLACK5, .BTDT05,
+.BORDERTOPDOTTEDWHITE5, .BTDTW5,
+.BORDERTOPDOTTEDGREY15, .BTDTG15,
+.BORDERTOPDOTTEDGREY25, .BTDTG25,
+.BORDERTOPDOTTEDGREY35, .BTDTG35,
+.BORDERTOPSOLIDRED5, .BTSOR5,
+.BORDERTOPSOLIDGREEN5, .BTSOG5,
+.BORDERTOPSOLIDBLUE5, .BTSOB5,
+.BORDERTOPSOLIDYELLOW5, .BTSOY5,
+.BORDERTOPSOLIDBLACK5, .BTSO05,
+.BORDERTOPSOLIDWHITE5, .BTSOW5,
+.BORDERTOPSOLIDGREY15, .BTSOG15,
+.BORDERTOPSOLIDGREY25, .BTSOG25,
+.BORDERTOPSOLIDGREY35, .BTSOG35,
+.BORDERALLDASHEDRED5, .BADAR5,
+.BORDERALLDASHEDGREEN5, .BADAG5,
+.BORDERALLDASHEDBLUE5, .BADAB5,
+.BORDERALLDASHEDYELLOW5, .BADAY5,
+.BORDERALLDASHEDBLACK5, .BADA05,
+.BORDERALLDASHEDWHITE5, .BADAW5,
+.BORDERALLDASHEDGREY15, .BADAG15,
+.BORDERALLDASHEDGREY25, .BADAG25,
+.BORDERALLDASHEDGREY35, .BADAG35,
+.BORDERALLDOUBLERED5, .BADOR5,
+.BORDERALLDOUBLEGREEN5, .BADOG5,
+.BORDERALLDOUBLEBLUE5, .BADOB5,
+.BORDERALLDOUBLEYELLOW5, .BADOY5,
+.BORDERALLDOUBLEBLACK5, .BADO05,
+.BORDERALLDOUBLEWHITE5, .BADOW5,
+.BORDERALLDOUBLEGREY15, .BADOG15,
+.BORDERALLDOUBLEGREY25, .BADOG25,
+.BORDERALLDOUBLEGREY35, .BADOG35,
+.BORDERALLDOTTEDRED5, .BADTR5,
+.BORDERALLDOTTEDGREEN5, .BADTG5,
+.BORDERALLDOTTEDBLUE5, .BADTB5,
+.BORDERALLDOTTEDYELLOW5, .BADTY5,
+.BORDERALLDOTTEDBLACK5, .BADT05,
+.BORDERALLDOTTEDWHITE5, .BADTW5,
+.BORDERALLDOTTEDGREY15, .BADTG15,
+.BORDERALLDOTTEDGREY25, .BADTG25,
+.BORDERALLDOTTEDGREY35, .BADTG35,
+.BORDERALLSOLIDRED5, .BASOR5,
+.BORDERALLSOLIDGREEN5, .BASOG5,
+.BORDERALLSOLIDBLUE5, .BASOB5,
+.BORDERALLSOLIDYELLOW5, .BASOY5,
+.BORDERALLSOLIDBLACK5, .BASO05,
+.BORDERALLSOLIDWHITE5, .BASOW5,
+.BORDERALLSOLIDGREY15, .BASOG15,
+.BORDERALLSOLIDGREY25, .BASOG25,
+.BORDERALLSOLIDGREY35, .BASOG35
+{
+    border-top-width: 5px;
+}
+
+.BORDERTOPDASHEDRED1, .BTDAR5,
+.BORDERTOPDASHEDRED2, .BTDAR5,
+.BORDERTOPDASHEDRED3, .BTDAR5,
+.BORDERTOPDASHEDRED4, .BTDAR5,
+.BORDERTOPDASHEDRED5, .BTDAR5,
+.BORDERTOPDASHEDGREEN5, .BTDAG5,
+.BORDERTOPDASHEDGREEN5, .BTDAG5,
+.BORDERTOPDASHEDGREEN5, .BTDAG5,
+.BORDERTOPDASHEDGREEN5, .BTDAG5,
+.BORDERTOPDASHEDGREEN5, .BTDAG5,
+.BORDERTOPDASHEDBLUE5, .BTDAB5,
+.BORDERTOPDASHEDBLUE5, .BTDAB5,
+.BORDERTOPDASHEDBLUE5, .BTDAB5,
+.BORDERTOPDASHEDBLUE5, .BTDAB5,
+.BORDERTOPDASHEDBLUE5, .BTDAB5,
+.BORDERTOPDASHEDYELLOW5, .BTDAY5,
+.BORDERTOPDASHEDYELLOW5, .BTDAY5,
+.BORDERTOPDASHEDYELLOW5, .BTDAY5,
+.BORDERTOPDASHEDYELLOW5, .BTDAY5,
+.BORDERTOPDASHEDYELLOW5, .BTDAY5,
+.BORDERTOPDASHEDBLACK5, .BTDA05,
+.BORDERTOPDASHEDBLACK5, .BTDA05,
+.BORDERTOPDASHEDBLACK5, .BTDA05,
+.BORDERTOPDASHEDBLACK5, .BTDA05,
+.BORDERTOPDASHEDBLACK5, .BTDA05,
+.BORDERTOPDASHEDWHITE5, .BTDAW5,
+.BORDERTOPDASHEDWHITE5, .BTDAW5,
+.BORDERTOPDASHEDWHITE5, .BTDAW5,
+.BORDERTOPDASHEDWHITE5, .BTDAW5,
+.BORDERTOPDASHEDWHITE5, .BTDAW5,
+.BORDERTOPDASHEDGREY15, .BTDAG15,
+.BORDERTOPDASHEDGREY15, .BTDAG15,
+.BORDERTOPDASHEDGREY15, .BTDAG15,
+.BORDERTOPDASHEDGREY15, .BTDAG15,
+.BORDERTOPDASHEDGREY15, .BTDAG15,
+.BORDERTOPDASHEDGREY25, .BTDAG25,
+.BORDERTOPDASHEDGREY25, .BTDAG25,
+.BORDERTOPDASHEDGREY25, .BTDAG25,
+.BORDERTOPDASHEDGREY25, .BTDAG25,
+.BORDERTOPDASHEDGREY25, .BTDAG25,
+.BORDERTOPDASHEDGREY35, .BTDAG35,
+.BORDERTOPDASHEDGREY35, .BTDAG35,
+.BORDERTOPDASHEDGREY35, .BTDAG35,
+.BORDERTOPDASHEDGREY35, .BTDAG35,
+.BORDERTOPDASHEDGREY35, .BTDAG35,
+
+{
+    border-top-style: dashed;
+}
+
+{
+    border-top-style: double;
+}
+
+{
+    border-top-style: dotted;
+}
+
+{
+    border-top-style: solid;
+}
+
+
+{
+    border-top-color: #FF0000;
+}
+
+
+{
+    border-top-color: #00FF00;
+}
+
+
+{
+    border-top-color: #0000FF;
+}
+
+
+{
+    border-top-color: #FFFF00;
+}
+
+
+{
+    border-top-color: #000000;
+}
+
+
+{
+    border-top-color: #FFFFFF;
+}
+
+
+{
+    border-top-color: #3F3F3F;
+}
+
+
+{
+    border-top-color: #7F7F7F;
+}
+
+
+{
+    border-top-color: #BFBFBF;
+}
+
+
 .BORDERTOP1, .BT1
 {
     border-top: 1px solid black;
