--- a/AcSS/utils.css
+++ b/AcSS/utils.css
@@ -1121,7 +1121,26 @@
     border-top-style: solid;
 }
 
-
+.BORDERTOPDASHEDRED1, .BTDAR1,
+.BORDERTOPDASHEDRED2, .BTDAR2,
+.BORDERTOPDASHEDRED3, .BTDAR3,
+.BORDERTOPDASHEDRED4, .BTDAR4,
+.BORDERTOPDASHEDRED5, .BTDAR5,
+.BORDERTOPDOUBLERED1, .BTDOR1,
+.BORDERTOPDOUBLERED2, .BTDOR2,
+.BORDERTOPDOUBLERED3, .BTDOR3,
+.BORDERTOPDOUBLERED4, .BTDOR4,
+.BORDERTOPDOUBLERED5, .BTDOR5,
+.BORDERTOPDOTTEDRED1, .BTDTR1,
+.BORDERTOPDOTTEDRED2, .BTDTR2,
+.BORDERTOPDOTTEDRED3, .BTDTR3,
+.BORDERTOPDOTTEDRED4, .BTDTR4,
+.BORDERTOPDOTTEDRED5, .BTDTR5,
+.BORDERTOPSOLIDRED1, .BTSOR1,
+.BORDERTOPSOLIDRED2, .BTSOR2,
+.BORDERTOPSOLIDRED3, .BTSOR3,
+.BORDERTOPSOLIDRED4, .BTSOR4,
+.BORDERTOPSOLIDRED5, .BTSOR5,
 {
     border-top-color: #FF0000;
 }
